# ImageStitching-based-on-NISwGSP

./: README.md
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/: CMakeLists.txt  Configure.h  main.cpp
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Feature/: ImageData.cpp  ImageData.h  MultiImages.cpp  MultiImages.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Mesh/: MeshOptimization.cpp  MeshOptimization.h
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Stitching/: APAP_Stitching.cpp  APAP_Stitching.h  NISwGSP_Stitching.cpp  NISwGSP_Stitching.h  Parameter.cpp
UglyMan_NISwGSP_Stitching/UglyMan_NISwGSP_Stitching/Util/: Blending.cpp  Blending.h  InputParser.cpp
